# Sentinel-Swarm-Shield

./: IMPLEMENTATION-COMPLETE.md  Makefile  README.md
backend/ai-services/: main.py  requirements.txt
backend/api-gateway/: go.mod
backend/api-gateway/cmd/server/: main.go
backend/api-gateway/pkg/graphql/: schema.go
backend/fusion-engine/: Cargo.toml
backend/fusion-engine/src/: config.rs  database.rs  kafka.rs  main.rs
backend/fusion-engine/src/fusion/: clustering.rs  data_assoc.rs  kalman.rs  mod.rs  track_manager.rs
backend/fusion-engine/src/sensor/: mod.rs
backend/fusion-engine/src/track/: mod.rs
backend/orchestrator/: go.mod
backend/orchestrator/cmd/server/: main.go
backend/shared/protos/: fusion.proto  orchestrator.proto  sensor.proto
docs/: ARCHITECTURE.md  DEPLOYMENT-PLAYBOOK.md  DEVELOPMENT.md  IMPLEMENTATION-SUMMARY.md  OPERATIONAL-RUNBOOKS.md  PHASE4-PRODUCTION-HARDENING.md  PHASE5-ADVANCED-INTEGRATION.md  TEAM-TRAINING-GUIDE.md
docs/adrs/: ADR-001-rust-for-sensor-fusion.md  ADR-002-python-for-ml-services.md  ADR-003-go-for-orchestration.md  ADR-004-kafka-event-streaming.md  ADR-005-postgres-timescaledb.md  ADR-006-nextjs-command-center.md  ADR-007-edge-first-architecture.md  ADR-008-zero-trust-security.md  ADR-009-graphql-api-gateway.md  ADR-010-federated-learning.md
frontend/apps/command-center/: next.config.js  package.json
infra/docker/: Dockerfile.api-gateway  Dockerfile.command-center  Dockerfile.fusion-engine  Dockerfile.orchestrator  dev-compose.yml
infra/monitoring/dashboards/: 01-system-overview.json
(+7 files in other folders)
