[package]
name = "sentinel-fusion-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC and protobuf
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Numerics
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid", "chrono"] }

# Kafka
rdkafka = { version = "0.35", features = ["cmake-build", "libz", "ssl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"

# Config
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[[bin]]
name = "fusion-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
